syntax = "proto3";

import "result.proto";


package api;
option go_package = "./;api";

message MsgBodyGetReq {
   repeated int64 msgIds = 1;
}

message MsgBodyGetResp {
   map<int64,string> bodies = 1;
}

message MsgDataGetResp {
   repeated string msgs = 1;
}

service MessageService {
   rpc GetMsgBody (MsgBodyGetReq) returns (Result) {}
}

